fix align to text about number of cats

--- a/public/style.css
+++ b/public/style.css
@@ -221,3 +221,13 @@ a {
     color: #000000;
     margin-bottom: 10px;
   }
+
+  .centered-text {
+    text-align: center;
+  }
+  
+  .left-aligned {
+    display: inline-block;
+    text-align: left;
+  }
+  
